# ARC-AGI-3-Agents

./: .env.example  .gitignore  pyproject.toml
agents/: __init__.py  claude_tools.py  structs.py
agents/templates/: claude_agent.py  claude_agents.py  gemini_agent.py  simple_memory_carryover.py  solver_agent.py
agents/templates/claude_agent/: claude_agents.py  claude_tools.py
tests/unit/: test_claude_agent.py
